added 2 new files for error handle and validation. Week06
